[gd_scene load_steps=2 format=3 uid="uid://cdsh2e12boepr"]

[ext_resource type="Script" uid="uid://cegg7kyswb1bm" path="res://scripts/ui/terminal_panel.gd" id="1_script"]

[node name="TerminalPanel" type="PanelContainer"]
custom_minimum_size = Vector2(0, 120)
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_script")

[node name="MainVBox" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HeaderContainer" type="HBoxContainer" parent="MainVBox"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2

[node name="TabBar" type="HBoxContainer" parent="MainVBox/HeaderContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="OutputTab" type="Button" parent="MainVBox/HeaderContainer/TabBar"]
custom_minimum_size = Vector2(80, 24)
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "OUTPUT"

[node name="ProblemsTab" type="Button" parent="MainVBox/HeaderContainer/TabBar"]
custom_minimum_size = Vector2(80, 24)
layout_mode = 2
toggle_mode = true
text = "PROBLEMS"

[node name="DebugTab" type="Button" parent="MainVBox/HeaderContainer/TabBar"]
custom_minimum_size = Vector2(80, 24)
layout_mode = 2
toggle_mode = true
text = "DEBUGs"

[node name="Spacer" type="Control" parent="MainVBox/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CollapseButton" type="Button" parent="MainVBox/HeaderContainer"]
custom_minimum_size = Vector2(28, 24)
layout_mode = 2
tooltip_text = "Collapse/Expand terminal"
text = "â–¼"
flat = true

[node name="ClearButton" type="Button" parent="MainVBox/HeaderContainer"]
custom_minimum_size = Vector2(50, 24)
layout_mode = 2
tooltip_text = "Clear terminal output (Ctrl+L)"
text = "Clear"
flat = true

[node name="CopyButton" type="Button" parent="MainVBox/HeaderContainer"]
custom_minimum_size = Vector2(50, 24)
layout_mode = 2
tooltip_text = "Copy all output to clipboard"
text = "Copy"
flat = true

[node name="Separator" type="HSeparator" parent="MainVBox"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MainVBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="OutputText" type="RichTextLabel" parent="MainVBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
theme_override_font_sizes/normal_font_size = 13
bbcode_enabled = true
scroll_following = true
selection_enabled = true
